# netmiko-config-audit

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  RESPONSIBLE-AI.md  SECURITY.md  pyproject.toml  requirements.txt  secrets.env.example
.github/: dependabot.yml
.github/workflows/: tests.yml
config/: config.example.yaml
scripts/: pre-commit
src/config_audit/: __init__.py  cli.py  collector.py  config.example.yaml  drift.py  gitstore.py  inventory.py  normalize.py  promote.py  push.py  report.py  sanitize_check.py  secrets.env.example  set_baseline.py
src/config_audit_mcp/: README.md  mcp-server__README.md  mcp-server__pyproject.toml  mcp-server__server.py  mcp-server__test_tools.py  mcp-server__tools.py  mcp__pyproject.toml  mcp__registry.py  mcp__server.py  registry.py  tools.py
tests/: mcp__test_capabilities.py  test_cli.py  test_collector.py  test_drift.py  test_gitstore.py  test_inventory.py  test_mcp_capabilities.py  test_mcp_registry.py  test_mcp_server.py  test_mcp_tools.py  test_normalize.py  test_promote.py  test_push.py  test_report.py  test_sanitize_check.py  test_set_baseline.py  test_smoke.py
tests/fixtures/: CAT1_baseline.cfg  CAT1_current_clean.cfg  CAT1_current_drift.cfg  ISR1_baseline.cfg  ISR1_current_clean.cfg  ISR1_current_drift.cfg  ISR1_current_removed.cfg
