[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "config-audit"
version = "0.1.0"
description = "Pull, version-control, and drift-check Cisco running-configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "netmiko>=4.3.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
config-audit = "config_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
